--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,16 @@ spring.datasource.url=jdbc:h2:mem:test
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#Actuator endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+info.app.name=Job Application
+info.app.description=First Job Application built with Spring Boot
+info.app.author=Janindu Munasinghe
+info.app.version=1.0.0
+
+management.info.env.enabled=true
+management.endpoint.shutdown.enabled=true
+server.shutdown=graceful
