--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 spring.application.name=firstjobapp
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+#H2 Database Configuration
+# spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:test
+# spring.jpa.generate-ddl=true
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+
+#PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/jobapp
+spring.datasource.username=username
+spring.datasource.password=password
+spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #Actuator endpoints
 management.endpoints.web.exposure.include=*
